--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       content="Web site created using create-react-app"
     />
     <title>React App</title>
-    <script src="/static/js/main.6301082a.js" type="text/javascript"></script>
-    <link href="/static/css/main.f833f7db.css" rel="stylesheet" type="text/css" />
+    <script src="/main.6301082a.js" type="text/javascript"></script>
+    <link href="/main.f833f7db.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
